# bbagent

./: .env.template  .gitignore  CLAUDE.md  README.md  agent.py  debug_tui.py  design.md  pyproject.toml
agent/: core.py  orchestrator.py  tui.py
