[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbagent"
version = "0.1.0"
description = "Autonomous agent powered by Claude — subprocess-based, no tmux required"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "textual>=8.2.5",
]

[project.scripts]
bbagent = "agent:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
